--- a/src/index.css
+++ b/src/index.css
@@ -28,10 +28,12 @@ Variables
   --large-screen-width: 1170px;
   --small-screen-width: 90vw;
   --fixed-width: 50rem;
+  
 }
 * {
   margin: 0;
   padding: 0;
+  /* padding: 8px; */
   box-sizing: border-box;
 }
 body {
